Navbar alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
 nav{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav-links{
